Add organization creation form
Just a first pass, though I removed some old copy too. This page could
use some more copy and links eventually.

--- a/readthedocsext/theme/templates/organizations/organization_list.html
+++ b/readthedocsext/theme/templates/organizations/organization_list.html
@@ -21,13 +21,13 @@
             <div class="header">
               {% trans "Get started" %}
             </div>
-            <div class="meta">{% trans "Start a new organization" %}</div>
+            <div class="meta">{% trans "Create a new organization" %}</div>
             <div class="description">
               <p>
                 If you are just getting started, create a new organization for
                 your team and start your 1 month trial.
               </p>
-              <a class="item" href="{{ organization_create }}">
+              <a class="item" href="{{ organization_create_url }}">
                 {% trans "Create a new organization" %}
               </a>
             </div>
