--- a/readthedocsext/theme/templates/builds/build_detail.html
+++ b/readthedocsext/theme/templates/builds/build_detail.html
@@ -153,6 +153,7 @@
       </div>
     </div>
 
+    {# TODO: remove this `build.output block completely #}
     {% if build.output %}
       {# If we have build output, this is an old build #}
       <p>
