--- a/readthedocsext/theme/templates/builds/build_detail.html
+++ b/readthedocsext/theme/templates/builds/build_detail.html
@@ -188,11 +188,18 @@
       {% comment %}
         Error list
       {% endcomment %}
-      <div class="ui attached inverted red segment" data-bind="visible: error" style="display: none;">
+      {% if build.notifications.exists %}
+      <div class="ui attached inverted red segment">
         <i class="fa-solid fa-exclamation circular icon"></i>
-        <span data-bind="text: error"></span>
+        {# Show error notifications as "build-error" #}
+        {% for notification in build.notifications.all %}
+        {% if notification.get_message.type == "error" %}
+        <span>{{ notification.get_message.get_rendered_body|safe }}</span>
+        {% endif %}
+        {% endfor %}
         <span>{% trans "For more information on this error, see our documentation." %}
-        </div>
+      </div>
+      {% endif %}
 
         <div class="ui inverted bottom attached segment transition slide">
 
