Keep rendering old `Build.error`
Render new `Notification` if there are any. Otherwise, render `Build.error`.

--- a/readthedocsext/theme/templates/builds/build_detail.html
+++ b/readthedocsext/theme/templates/builds/build_detail.html
@@ -197,7 +197,12 @@
         <span>{{ notification.get_message.get_rendered_body|safe }}</span>
         {% endif %}
         {% endfor %}
-        <span>{% trans "For more information on this error, see our documentation." %}
+        <span>{% trans "For more information on this error, see our documentation." %}</span>
+      </div>
+      {% else %}
+      <div class="ui attached inverted red segment" data-bind="visible: error" style="display: none;">
+        <span data-bind="text: error"></span>
+        <span>{% trans "For more information on this error, see our documentation." %}</span>
       </div>
       {% endif %}
 
