Implementation of new notification system (#254)
* Initial comment

* Show new notifications statically via Django templates

* Refresh the page once the build has finished

This temporal hack allows us to show the new notifications from Django
templates. The next step here is to implement the notifications properly using
Knockout and keep this feature on.

* Keep rendering old `Build.error`

Render new `Notification` if there are any. Otherwise, render `Build.error`.

* Iterate over the right element

* Remove debugging

* Lint

* Remove rendering for `django-messages-extends`

Related https://github.com/readthedocs/readthedocs.org/pull/10994

* Remove invalid comment

* Build assets

--- a/readthedocsext/theme/templates/builds/build_detail.html
+++ b/readthedocsext/theme/templates/builds/build_detail.html
@@ -153,6 +153,7 @@
       </div>
     </div>
 
+    {# TODO: remove this `build.output block completely #}
     {% if build.output %}
       {# If we have build output, this is an old build #}
       <p>
@@ -187,11 +188,22 @@
       {% comment %}
         Error list
       {% endcomment %}
-      <div class="ui attached inverted red segment" data-bind="visible: error" style="display: none;">
-        <i class="fa-solid fa-exclamation circular icon"></i>
-        <span data-bind="text: error"></span>
-        <span>{% trans "For more information on this error, see our documentation." %}
+      {% if build.notifications.exists %}
+        {% for notification in build.notifications.all %}
+          {% if notification.get_message.type == "error" %}
+            <div class="ui attached inverted red segment">
+              <i class="fa-solid fa-exclamation circular icon"></i>
+              <span>{{ notification.get_message.get_rendered_body|safe }}</span>
+              <span>{% trans "For more information on this error, see our documentation." %}</span>
+            </div>
+          {% endif %}
+        {% endfor %}
+      {% else %}
+        <div class="ui attached inverted red segment" data-bind="visible: error" style="display: none;">
+          <span data-bind="text: error"></span>
+          <span>{% trans "For more information on this error, see our documentation." %}</span>
         </div>
+      {% endif %}
 
         <div class="ui inverted bottom attached segment transition slide">
 
