--- a/readthedocsext/theme/templates/projects/settings_advanced_form.html
+++ b/readthedocsext/theme/templates/projects/settings_advanced_form.html
@@ -8,9 +8,11 @@
 {% block project_advanced_active %}active{% endblock %}
 
 {% block project_edit_content %}
-  <div class="ui form">
-    {% crispy form %}
-  </div>
+  <form class="ui form" method="post" action=".">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <input class="ui primary button" type="submit" value="{% trans "Save" %}" />
+  </form>
 {% endblock %}
 
 {% block project_edit_sidebar_help_topics %}
