Hide "Sponsored by" section on commercial
Fixes https://github.com/readthedocs/ext-theme/issues/264

--- a/readthedocsext/theme/templates/includes/footer.html
+++ b/readthedocsext/theme/templates/includes/footer.html
@@ -131,6 +131,8 @@
     {% endblock footer_copyright %}
 
     {% block footer_sponsors %}
+
+    {% if USE_PROMOS %}
       <div class="ui inverted horizontal divider very padded">
         Sponsored by
       </div>
@@ -191,6 +193,7 @@
           </div>
         </div>
       </div>
+    {% endif %}
     {% endblock footer_sponsors %}
 
   </div>
