Notifications: show attached to `User`, `Project` and `Organization` (#261)
* Notifications: show attached to `User`, `Project` and `Organization`

Render notifications attached to these objects.
This is the first pass of this work and there are some things we need to make
decisions and improve.

- Where (what pages) these notifications should render?
- How "global" they should be considered?

Note we are rendering these notifications in the template for now,
but in the future they will be rendered using the APIv3: #259

Closes #260

* Render notifications before project/organization header

* Apply suggestions from code review

Co-authored-by: Anthony <aj@ohess.org>

---------

Co-authored-by: Anthony <aj@ohess.org>

--- a/readthedocsext/theme/templates/organizations/partials/header.html
+++ b/readthedocsext/theme/templates/organizations/partials/header.html
@@ -20,6 +20,16 @@ is_collapsed (default: True)
 {% endcomment %}
 
 {% block organization_header %}
+  {# Render all the notifications attached to the organization.#}
+  {% for notification in organization.notifications.all %}
+    <div class="ui message">
+      <i class="{{ notification.get_message.get_display_icon_classes }} icon"></i>
+      <span>{{ notification.get_message.get_rendered_body|safe }}</span>
+    </div>
+  {% endfor %}
+
+
+
   <div class="ui top attached segment" data-bind="using: CollapsingHeaderView({{ is_collapsed|default_if_none:True|yesno:"true,false" }})">
 
     {% block organization_header_metadata %}
