Several form field fixes
- Wrap checkbox with correct surrounding element for a field
- Add search class to multi select dropdown to make it keyboard searchable
- Multi select label icon was not showing from missing codepoint

--- a/readthedocsext/theme/templates/semantic-ui/layout/checkboxselectmultiple.html
+++ b/readthedocsext/theme/templates/semantic-ui/layout/checkboxselectmultiple.html
@@ -3,7 +3,7 @@
 
 <select
   multiple="true"
-  class="ui {% if field_class %} {{ field_class }}{% endif %} dropdown"
+  class="ui {% if field_class %} {{ field_class }}{% endif %} search dropdown"
   name="{{ field.html_name }}"
   id="id_{{ field.html_name }}"
   {% if flat_attrs %}{{ flat_attrs|safe }}{% endif %}
