--- a/readthedocsext/theme/templates/projects/import_form.html
+++ b/readthedocsext/theme/templates/projects/import_form.html
@@ -3,6 +3,8 @@
 {% load static %}
 {% load i18n %}
 
+{% load crispy_forms_tags %}
+
 {% block project_add_subheader %}
   {% trans "Create a new project from a repository" %}
 {% endblock project_add_subheader %}
@@ -26,16 +28,9 @@
   {% block project_add_automatic_tab %}
     <div class="ui active tab" data-tab="automatic">
 
-      {% if error_import_automatically %}
-        <div class="ui small {{ error_import_automatically.type }} message">
-          <div class="header">
-            {{ error_import_automatically.get_rendered_header|safe }}
-          </div>
-          {{ error_import_automatically.get_rendered_body|safe }}
-        </div>
-      {% endif %}
+      {{ form_automatic | as_crispy_errors }}
 
-      <div class="ui {% if error_import_automatically %} disabled {% endif %} basic segment">
+      <div class="ui {% if form_automatic.is_disabled %} disabled {% endif %} basic segment">
         {% include "projects/partials/project_create_automatic.html" %}
       </div>
     </div>
@@ -44,16 +39,9 @@
   {% block project_add_manual_tab %}
     <div class="ui tab" data-tab="manual">
 
-      {% if error_import_manually %}
-        <div class="ui small {{ error_import_manually.type }} message">
-          <div class="header">
-            {{ error_import_manually.get_rendered_header|safe }}
-          </div>
-          {{ error_import_manually.get_rendered_body|safe }}
-        </div>
-      {% endif %}
+      {{ form_manual | as_crispy_errors }}
 
-      <div class="ui {% if error_import_automatically %} disabled {% endif %} basic segment">
+      <div class="ui {% if form_manual.is_disabled %} disabled {% endif %} basic segment">
         <div class="ui small message">
           <div class="header">
             <i class="fa-solid fa-triangle-exclamation icon"></i>
